Atualizações Front e Back durante a interligação
