# back-end/src/controllers/FamiliaController.js
@@ -1,57 +1,60 @@
-//familiaController.js
 import Familia from '../models/Familia.js';
 
 class FamiliaController {
   static async getAllEntities(req, res) {
     try {
-      const Familiaes = await Familia.findAll();
-      res.json(Familiaes);
+      const familias = await Familia.findAll();
+      res.json(familias);
     } catch (error) {
       console.error(error);
-      res.status(500).json({ error: 'Erro ao buscar usuários.' });
+      res.status(500).json({ error: 'Erro ao buscar famílias.' });
     }
-  };
+  }
+
   static async getEntity(req, res) {
     try {
       const { id } = req.params;
-      const Familia = await Familia.findByPk(id);
-      res.json(Familia);
+      const familia = await Familia.findByPk(id);
+      res.json(familia);
     } catch (error) {
       console.error(error);
-      res.status(500).json({ error: 'Erro ao buscar usuário.' });
+      res.status(500).json({ error: 'Erro ao buscar família.' });
     }
-  };
-static async createEntity(req, res) {
-    try {
-            const { nome, quantidadeMIN, quantidadeBase, quantidadeMax } = req.body;
-            const Familia = await Familia.create({ nome, quantidadeBase, quantidadeMax, quantidadeMIN });
-            res.status(201).json(Familia);
-    } catch (error) {
-        console.error(error);
-        res.status(500).json({ error: 'Erro ao criar usuário.' });
-    }
-};
+  }
 
-static async updateEntity(req, res) {
+  static async createEntity(req, res) {
     try {
-        const { nome } = req.body;
-        await Familia.update({ nome }, { where: { id } });
+      const { nome, quantidadeMIN, quantidadeMAX } = req.body;
+      const newFamilia = await Familia.create({ nome, quantidadeMIN, quantidadeMAX });
+      res.status(201).json(newFamilia);
     } catch (error) {
-        console.error(error);
-        res.status(500).json({ error: 'Erro ao atualizar usuário.' });
+      console.error(error);
+      res.status(500).json({ error: 'Erro ao criar família.' });
     }
-}
+  }
+
+  static async updateEntity(req, res) {
+    try {
+      const { id } = req.params;
+      const { nome, quantidadeMIN, quantidadeMAX } = req.body;
+      await Familia.update({ nome, quantidadeMIN, quantidadeMAX }, { where: { id } });
+      res.json({ message: 'Família atualizada com sucesso.' });
+    } catch (error) {
+      console.error(error);
+      res.status(500).json({ error: 'Erro ao atualizar família.' });
+    }
+  }
   
   static async deleteEntity(req, res) {
     try {
       const { id } = req.params;
       await Familia.destroy({ where: { id } });
-      res.json({ message: 'Usuário deletado com sucesso.' });
+      res.json({ message: 'Família deletada com sucesso.' });
     } catch (error) {
       console.error(error);
-      res.status(500).json({ error: 'Erro ao deletar usuário.' });
+      res.status(500).json({ error: 'Erro ao deletar família.' });
     }
-  };
+  }
 }
 
 export default FamiliaController;
